完善后台管理界面的 评论模块，和 文章模块

--- a/views/admin/admin-comment.pug
+++ b/views/admin/admin-comment.pug
@@ -37,7 +37,7 @@ block main
               articleId
             },
             success(res){
-              if(res.state){
+              if(res.status){
                 layer.msg(res.message, {
                   anim: 1,
                   time: 800
